--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "build:docs": "ng build --output-path docs --base-href /cv/",
+    "deploy": "ng deploy --base-href=/cv/"
   },
   "private": true,
   "dependencies": {
